GKV/target/generated-sources/antlr4/edu/asu/msse/gkv/GKVParser.java
// Generated from GKV.g4 by ANTLR 4.5.3

  package edu.asu.msse.gkv;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GKVParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, INTEGER_LITERAL=11, DECIMAL_LITERAL=12, STRING_LITERAL=13, BOOLEAN=14, 
		FK_FUNCTION=15, FK_USES=16, FK_RETURNS=17, FK_RETURN=18, O_BRACE=19, C_BRACE=20, 
		CK_IF=21, CK_ELSE=22, CK_THEN=23, CK_ELSIF=24, FK_CALL=25, FK_WITH=26, 
		ASSIGNMENT_SYMBOL=27, COMMA=28, COMPK_KEYWORDS=29, IDENTIFIER=30, ADDING_OPERATOR=31, 
		MULTIPLYING_OPERATOR=32, WHITESPACE=33;
	public static final int
		RULE_program = 0, RULE_sequenceOfStatements = 1, RULE_simpleStatement = 2, 
		RULE_compoundStatement = 3, RULE_assignmentStatement = 4, RULE_ifStatement = 5, 
		RULE_loop = 6, RULE_condition = 7, RULE_expression = 8, RULE_relation = 9, 
		RULE_simpleExpression = 10, RULE_term = 11, RULE_factor = 12, RULE_declarationStatement = 13, 
		RULE_functionCall = 14, RULE_parameters = 15, RULE_function = 16, RULE_display = 17, 
		RULE_datatype = 18;
	public static final String[] ruleNames = {
		"program", "sequenceOfStatements", "simpleStatement", "compoundStatement", 
		"assignmentStatement", "ifStatement", "loop", "condition", "expression", 
		"relation", "simpleExpression", "term", "factor", "declarationStatement", 
		"functionCall", "parameters", "function", "display", "datatype"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "';'", "'while'", "'and'", "'or'", "'('", "')'", "'show'", "'integer'", 
		"'decimal'", "'boolean'", null, null, null, null, "'function'", "'uses'", 
		"'returns'", "'return'", "'{'", "'}'", "'if'", "'else'", "'then'", "'elsif'", 
		"'call'", "'with'", "'='", "','"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, "INTEGER_LITERAL", 
		"DECIMAL_LITERAL", "STRING_LITERAL", "BOOLEAN", "FK_FUNCTION", "FK_USES", 
		"FK_RETURNS", "FK_RETURN", "O_BRACE", "C_BRACE", "CK_IF", "CK_ELSE", "CK_THEN", 
		"CK_ELSIF", "FK_CALL", "FK_WITH", "ASSIGNMENT_SYMBOL", "COMMA", "COMPK_KEYWORDS", 
		"IDENTIFIER", "ADDING_OPERATOR", "MULTIPLYING_OPERATOR", "WHITESPACE"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GKV.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GKVParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public List<SequenceOfStatementsContext> sequenceOfStatements() {
			return getRuleContexts(SequenceOfStatementsContext.class);
		}
		public SequenceOfStatementsContext sequenceOfStatements(int i) {
			return getRuleContext(SequenceOfStatementsContext.class,i);
		}
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GKVListener ) ((GKVListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GKVListener ) ((GKVListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(40);
				switch (_input.LA(1)) {
				case T__0:
				case T__1:
				case T__6:
				case T__7:
				case T__8:
				case T__9:
				case CK_IF:
				case FK_CALL:
				case IDENTIFIER:
					{
					setState(38);
					sequenceOfStatements();
					}
					break;
				case FK_FUNCTION:
					{
					setState(39);
					function();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(42); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << FK_FUNCTION) | (1L << CK_IF) | (1L << FK_CALL) | (1L << IDENTIFIER))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SequenceOfStatementsContext extends ParserRuleContext {
		public List<SimpleStatementContext> simpleStatement() {
			return getRuleContexts(SimpleStatementContext.class);
		}
		public SimpleStatementContext simpleStatement(int i) {
			return getRuleContext(SimpleStatementContext.class,i);
		}
		public List<CompoundStatementContext> compoundStatement() {
			return getRuleContexts(CompoundStatementContext.class);
		}
		public CompoundStatementContext compoundStatement(int i) {
			return getRuleContext(CompoundStatementContext.class,i);
		}
		public SequenceOfStatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sequenceOfStatements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GKVListener ) ((GKVListener)listener).enterSequenceOfStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GKVListener ) ((GKVListener)listener).exitSequenceOfStatements(this);
		}
	}

	public final SequenceOfStatementsContext sequenceOfStatements() throws RecognitionException {
		SequenceOfStatementsContext _localctx = new SequenceOfStatementsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sequenceOfStatements);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(46); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					setState(46);
					switch (_input.LA(1)) {
					case T__0:
					case T__6:
					case T__7:
					case T__8:
					case T__9:
					case FK_CALL:
					case IDENTIFIER:
						{
						setState(44);
						simpleStatement();
						}
						break;
					case T__1:
					case CK_IF:
						{
						setState(45);
						compoundStatement();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(48); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SimpleStatementContext extends ParserRuleContext {
		public AssignmentStatementContext assignmentStatement() {
			return getRuleContext(AssignmentStatementContext.class,0);
		}
		public DeclarationStatementContext declarationStatement() {
			return getRuleContext(DeclarationStatementContext.class,0);
		}
		public FunctionCallContext functionCall() {
			return getRuleContext(FunctionCallContext.class,0);
		}
		public DisplayContext display() {
			return getRuleContext(DisplayContext.class,0);
		}
		public SimpleStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GKVListener ) ((GKVListener)listener).enterSimpleStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GKVListener ) ((GKVListener)listener).exitSimpleStatement(this);
		}
	}

	public final SimpleStatementContext simpleStatement() throws RecognitionException {
		SimpleStatementContext _localctx = new SimpleStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_simpleStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				{
				setState(50);
				assignmentStatement();
				}
				break;
			case T__7:
			case T__8:
			case T__9:
				{
				setState(51);
				declarationStatement();
				}
				break;
			case FK_CALL:
				{
				setState(52);
				functionCall();
				}
				break;
			case T__6:
				{
				setState(53);
				display();
				}
				break;
			case T__0:
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(56);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CompoundStatementContext extends ParserRuleContext {
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public LoopContext loop() {
			return getRuleContext(LoopContext.class,0);
		}
		public CompoundStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compoundStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GKVListener ) ((GKVListener)listener).enterCompoundStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GKVListener ) ((GKVListener)listener).exitCompoundStatement(this);
		}
	}

	public final CompoundStatementContext compoundStatement() throws RecognitionException {
		CompoundStatementContext _localctx = new CompoundStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_compoundStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			switch (_input.LA(1)) {
			case CK_IF:
				{
				setState(58);
				ifStatement();
				}
				break;
			case T__1:
				{
				setState(59);
				loop();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentStatementContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(GKVParser.IDENTIFIER, 0); }
		public TerminalNode ASSIGNMENT_SYMBOL() { return getToken(GKVParser.ASSIGNMENT_SYMBOL, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public AssignmentStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignmentStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GKVListener ) ((GKVListener)listener).enterAssignmentStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GKVListener ) ((GKVListener)listener).exitAssignmentStatement(this);
		}
	}

	public final AssignmentStatementContext assignmentStatement() throws RecognitionException {
		AssignmentStatementContext _localctx = new AssignmentStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_assignmentStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			match(IDENTIFIER);
			setState(63);
			match(ASSIGNMENT_SYMBOL);
			setState(64);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfStatementContext extends ParserRuleContext {
		public TerminalNode CK_IF() { return getToken(GKVParser.CK_IF, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode CK_THEN() { return getToken(GKVParser.CK_THEN, 0); }
		public List<TerminalNode> O_BRACE() { return getTokens(GKVParser.O_BRACE); }
		public TerminalNode O_BRACE(int i) {
			return getToken(GKVParser.O_BRACE, i);
		}
		public List<SequenceOfStatementsContext> sequenceOfStatements() {
			return getRuleContexts(SequenceOfStatementsContext.class);
		}
		public SequenceOfStatementsContext sequenceOfStatements(int i) {
			return getRuleContext(SequenceOfStatementsContext.class,i);
		}
		public List<TerminalNode> C_BRACE() { return getTokens(GKVParser.C_BRACE); }
		public TerminalNode C_BRACE(int i) {
			return getToken(GKVParser.C_BRACE, i);
		}
		public TerminalNode CK_ELSE() { return getToken(GKVParser.CK_ELSE, 0); }
		public IfStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GKVListener ) ((GKVListener)listener).enterIfStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GKVListener ) ((GKVListener)listener).exitIfStatement(this);
		}
	}

	public final IfStatementContext ifStatement() throws RecognitionException {
		IfStatementContext _localctx = new IfStatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_ifStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			match(CK_IF);
			setState(67);
			condition();
			setState(68);
			match(CK_THEN);
			setState(69);
			match(O_BRACE);
			setState(70);
			sequenceOfStatements();
			setState(71);
			match(C_BRACE);
			setState(77);
			_la = _input.LA(1);
			if (_la==CK_ELSE) {
				{
				setState(72);
				match(CK_ELSE);
				setState(73);
				match(O_BRACE);
				setState(74);
				sequenceOfStatements();
				setState(75);
				match(C_BRACE);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LoopContext extends ParserRuleContext {
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode O_BRACE() { return getToken(GKVParser.O_BRACE, 0); }
		public SequenceOfStatementsContext sequenceOfStatements() {
			return getRuleContext(SequenceOfStatementsContext.class,0);
		}
		public TerminalNode C_BRACE() { return getToken(GKVParser.C_BRACE, 0); }
		public LoopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_loop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GKVListener ) ((GKVListener)listener).enterLoop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GKVListener ) ((GKVListener)listener).exitLoop(this);
		}
	}

	public final LoopContext loop() throws RecognitionException {
		LoopContext _localctx = new LoopContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_loop);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(T__1);
			setState(80);
			condition();
			setState(81);
			match(O_BRACE);
			setState(82);
			sequenceOfStatements();
			setState(83);
			match(C_BRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GKVListener ) ((GKVListener)listener).enterCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GKVListener ) ((GKVListener)listener).exitCondition(this);
		}
	}

	public final ConditionContext condition() throws RecognitionException {
		ConditionContext _localctx = new ConditionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_condition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public List<RelationContext> relation() {
			return getRuleContexts(RelationContext.class);
		}
		public RelationContext relation(int i) {
			return getRuleContext(RelationContext.class,i);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GKVListener ) ((GKVListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GKVListener ) ((GKVListener)listener).exitExpression(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_expression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			relation();
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2 || _la==T__3) {
				{
				setState(92);
				switch (_input.LA(1)) {
				case T__2:
					{
					setState(88);
					match(T__2);
					setState(89);
					relation();
					}
					break;
				case T__3:
					{
					setState(90);
					match(T__3);
					setState(91);
					relation();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RelationContext extends ParserRuleContext {
		public List<SimpleExpressionContext> simpleExpression() {
			return getRuleContexts(SimpleExpressionContext.class);
		}
		public SimpleExpressionContext simpleExpression(int i) {
			return getRuleContext(SimpleExpressionContext.class,i);
		}
		public TerminalNode COMPK_KEYWORDS() { return getToken(GKVParser.COMPK_KEYWORDS, 0); }
		public RelationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GKVListener ) ((GKVListener)listener).enterRelation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GKVListener ) ((GKVListener)listener).exitRelation(this);
		}
	}

	public final RelationContext relation() throws RecognitionException {
		RelationContext _localctx = new RelationContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_relation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			simpleExpression();
			setState(100);
			_la = _input.LA(1);
			if (_la==COMPK_KEYWORDS) {
				{
				setState(98);
				match(COMPK_KEYWORDS);
				setState(99);
				simpleExpression();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SimpleExpressionContext extends ParserRuleContext {
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public List<TerminalNode> ADDING_OPERATOR() { return getTokens(GKVParser.ADDING_OPERATOR); }
		public TerminalNode ADDING_OPERATOR(int i) {
			return getToken(GKVParser.ADDING_OPERATOR, i);
		}
		public SimpleExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GKVListener ) ((GKVListener)listener).enterSimpleExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GKVListener ) ((GKVListener)listener).exitSimpleExpression(this);
		}
	}

	public final SimpleExpressionContext simpleExpression() throws RecognitionException {
		SimpleExpressionContext _localctx = new SimpleExpressionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_simpleExpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			term();
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ADDING_OPERATOR) {
				{
				{
				setState(103);
				match(ADDING_OPERATOR);
				setState(104);
				term();
				}
				}
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermContext extends ParserRuleContext {
		public List<FactorContext> factor() {
			return getRuleContexts(FactorContext.class);
		}
		public FactorContext factor(int i) {
			return getRuleContext(FactorContext.class,i);
		}
		public List<TerminalNode> MULTIPLYING_OPERATOR() { return getTokens(GKVParser.MULTIPLYING_OPERATOR); }
		public TerminalNode MULTIPLYING_OPERATOR(int i) {
			return getToken(GKVParser.MULTIPLYING_OPERATOR, i);
		}
		public TermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GKVListener ) ((GKVListener)listener).enterTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GKVListener ) ((GKVListener)listener).exitTerm(this);
		}
	}

	public final TermContext term() throws RecognitionException {
		TermContext _localctx = new TermContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_term);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			factor();
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==MULTIPLYING_OPERATOR) {
				{
				{
				setState(111);
				match(MULTIPLYING_OPERATOR);
				setState(112);
				factor();
				}
				}
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FactorContext extends ParserRuleContext {
		public TerminalNode INTEGER_LITERAL() { return getToken(GKVParser.INTEGER_LITERAL, 0); }
		public TerminalNode DECIMAL_LITERAL() { return getToken(GKVParser.DECIMAL_LITERAL, 0); }
		public TerminalNode IDENTIFIER() { return getToken(GKVParser.IDENTIFIER, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public FactorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_factor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GKVListener ) ((GKVListener)listener).enterFactor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GKVListener ) ((GKVListener)listener).exitFactor(this);
		}
	}

	public final FactorContext factor() throws RecognitionException {
		FactorContext _localctx = new FactorContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_factor);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			switch (_input.LA(1)) {
			case INTEGER_LITERAL:
				{
				setState(118);
				match(INTEGER_LITERAL);
				}
				break;
			case DECIMAL_LITERAL:
				{
				setState(119);
				match(DECIMAL_LITERAL);
				}
				break;
			case IDENTIFIER:
				{
				setState(120);
				match(IDENTIFIER);
				}
				break;
			case T__4:
				{
				setState(121);
				match(T__4);
				setState(122);
				expression();
				setState(123);
				match(T__5);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
